fix logo nav spacing

--- a/lesson3/css/main.css
+++ b/lesson3/css/main.css
@@ -17,6 +17,7 @@ body {
 
 header {
   width: 100%;
+  margin-bottom: 2rem;
 }
 
 header h2 {
